2015-02-25  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml (ntsec-mapping): Match the description of the default
	values for db_home, db_shell, and db_gecos to the latest changes.

2015-02-24  Warren Young  <warren@etr-usa.com>

	* faq-using.xml (faq.using.ssh-pubkey-stops-working): Added the
	chgrp None ~/.ssh/* fix for SSH key failure in Cygwin 1.7.34+.

2015-02-17  Warren Young  <warren@etr-usa.com>

	* faq-using.xml (faq.using.startup-slow): Applied Andrey Repin's
	improvements <anrdaemon@yandex.ru>, plus made a few minor ones
	of my own.

2015-02-16  Corinna Vinschen  <corinna@vinschen.de>

	* setup-files.xml (setup-files): Drop hint to set HOME in Windows
	environment.
	* setup-env.xml (setup-env-ov): Discourage setting HOME in the Windows
	environment.

2015-02-15  Corinna Vinschen  <corinna@vinschen.de>

	* posix.xml (std-gnu): Add missing __mempcpy.

2015-02-12  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: Throughout fix references to the Cygwin version number.

2015-02-11  Warren Young  <warren@etr-usa.com>

	* faq-using.xml (faq.using.startup-slow): New entry.

2015-02-06  Corinna Vinschen  <corinna@vinschen.de>

	* posix.xml (std-susv4): Move cabsl, cimagl, creall, hypotl, sqrtl here
	from std-notimpl.  Add finitel.

2015-02-04  Corinna Vinschen  <corinna@vinschen.de>

	* posix.xml (std-susv4): Move wcstold here from std-notimpl.

2015-02-04  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.34): Add wcstold.

2015-02-04  Corinna Vinschen  <corinna@vinschen.de>

	* faq-using.xml (faq.using.ssh-pubkey-stops-working): New entry.
	(faq.using.same-with-rhosts): Ditto.

2015-02-03  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (regtool): Clarify save action.  Add description for
	restore action.
	* new-features.xml (ov-new1.7.34): Add regtool restore.

2015-02-03  Corinna Vinschen  <corinna@vinschen.de>

	* Throughout, replace http with https as far as cygwin.com and
	sourceware.org URLs are concerned.