@@ -1,3 +1,9 @@
+2015-02-25  Warren Young  <warren@etr-usa.com>
+
+	* faq-using.xml (faq.using.ssh-pubkey-stops-working): More
+	improvements to the chgrp None hack to account for domains
+	and non-English versions of Windows.
+
 2015-02-25  Corinna Vinschen  <corinna@vinschen.de>
 
 	* ntsec.xml (ntsec-mapping): Match the description of the default
